Рендер карточек + разработка интерактива

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="style/content.css">
     <title>Document</title>
 </head>
 <body>
@@ -12,8 +13,239 @@
         <div class="header__serch"><input type="text"></div>
     </header>
     <main>
-        <section class="content">
-            <div class="content__anime-grid" id="animeGrid"></div>
+        <section class="content" id="content-container">
+            <div class="anime-card">
+                <div class="anime-card__image-wrapper">
+                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
+                    <div class="anime-card__rating">⭐ SCORE</div>
+                </div>
+                <div class="anime-card__info">
+                    <h3 class="anime-card__title">TITLE</h3>
+                    <p class="anime-card__type-year">TYPE · YEAR</p>
+                    <div class="anime-card__genres">
+                    <!-- Жанры -->
+                    <span class="genre">Action</span>
+                    <span class="genre">Adventure</span>
+                    <!-- Вставляй через JS -->
+                    </div>
+                    <p class="anime-card__description">DESCRIPTION</p>
+                </div>
+                <div class="anime-card__actions">
+                    <button class="btn btn--detail">Подробнее</button>
+                    <button class="btn btn--watch">Смотреть</button>
+                </div>
+            </div>
+            <div class="anime-card">
+                <div class="anime-card__image-wrapper">
+                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
+                    <div class="anime-card__rating">⭐ SCORE</div>
+                </div>
+                <div class="anime-card__info">
+                    <h3 class="anime-card__title">TITLE</h3>
+                    <p class="anime-card__type-year">TYPE · YEAR</p>
+                    <div class="anime-card__genres">
+                    <!-- Жанры -->
+                    <span class="genre">Action</span>
+                    <span class="genre">Adventure</span>
+                    <!-- Вставляй через JS -->
+                    </div>
+                    <p class="anime-card__description">DESCRIPTION</p>
+                </div>
+                <div class="anime-card__actions">
+                    <button class="btn btn--detail">Подробнее</button>
+                    <button class="btn btn--watch">Смотреть</button>
+                </div>
+            </div>
+            <div class="anime-card">
+                <div class="anime-card__image-wrapper">
+                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
+                    <div class="anime-card__rating">⭐ SCORE</div>
+                </div>
+                <div class="anime-card__info">
+                    <h3 class="anime-card__title">TITLE</h3>
+                    <p class="anime-card__type-year">TYPE · YEAR</p>
+                    <div class="anime-card__genres">
+                    <!-- Жанры -->
+                    <span class="genre">Action</span>
+                    <span class="genre">Adventure</span>
+                    <!-- Вставляй через JS -->
+                    </div>
+                    <p class="anime-card__description">DESCRIPTION</p>
+                </div>
+                <div class="anime-card__actions">
+                    <button class="btn btn--detail">Подробнее</button>
+                    <button class="btn btn--watch">Смотреть</button>
+                </div>
+            </div>
+            <div class="anime-card">
+                <div class="anime-card__image-wrapper">
+                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
+                    <div class="anime-card__rating">⭐ SCORE</div>
+                </div>
+                <div class="anime-card__info">
+                    <h3 class="anime-card__title">TITLE</h3>
+                    <p class="anime-card__type-year">TYPE · YEAR</p>
+                    <div class="anime-card__genres">
+                    <!-- Жанры -->
+                    <span class="genre">Action</span>
+                    <span class="genre">Adventure</span>
+                    <!-- Вставляй через JS -->
+                    </div>
+                    <p class="anime-card__description">DESCRIPTION</p>
+                </div>
+                <div class="anime-card__actions">
+                    <button class="btn btn--detail">Подробнее</button>
+                    <button class="btn btn--watch">Смотреть</button>
+                </div>
+            </div>
+            <div class="anime-card">
+                <div class="anime-card__image-wrapper">
+                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
+                    <div class="anime-card__rating">⭐ SCORE</div>
+                </div>
+                <div class="anime-card__info">
+                    <h3 class="anime-card__title">TITLE</h3>
+                    <p class="anime-card__type-year">TYPE · YEAR</p>
+                    <div class="anime-card__genres">
+                    <!-- Жанры -->
+                    <span class="genre">Action</span>
+                    <span class="genre">Adventure</span>
+                    <!-- Вставляй через JS -->
+                    </div>
+                    <p class="anime-card__description">DESCRIPTION</p>
+                </div>
+                <div class="anime-card__actions">
+                    <button class="btn btn--detail">Подробнее</button>
+                    <button class="btn btn--watch">Смотреть</button>
+                </div>
+            </div>
+            <div class="anime-card">
+                <div class="anime-card__image-wrapper">
+                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
+                    <div class="anime-card__rating">⭐ SCORE</div>
+                </div>
+                <div class="anime-card__info">
+                    <h3 class="anime-card__title">TITLE</h3>
+                    <p class="anime-card__type-year">TYPE · YEAR</p>
+                    <div class="anime-card__genres">
+                    <!-- Жанры -->
+                    <span class="genre">Action</span>
+                    <span class="genre">Adventure</span>
+                    <!-- Вставляй через JS -->
+                    </div>
+                    <p class="anime-card__description">DESCRIPTION</p>
+                </div>
+                <div class="anime-card__actions">
+                    <button class="btn btn--detail">Подробнее</button>
+                    <button class="btn btn--watch">Смотреть</button>
+                </div>
+            </div>
+            <div class="anime-card">
+                <div class="anime-card__image-wrapper">
+                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
+                    <div class="anime-card__rating">⭐ SCORE</div>
+                </div>
+                <div class="anime-card__info">
+                    <h3 class="anime-card__title">TITLE</h3>
+                    <p class="anime-card__type-year">TYPE · YEAR</p>
+                    <div class="anime-card__genres">
+                    <!-- Жанры -->
+                    <span class="genre">Action</span>
+                    <span class="genre">Adventure</span>
+                    <!-- Вставляй через JS -->
+                    </div>
+                    <p class="anime-card__description">DESCRIPTION</p>
+                </div>
+                <div class="anime-card__actions">
+                    <button class="btn btn--detail">Подробнее</button>
+                    <button class="btn btn--watch">Смотреть</button>
+                </div>
+            </div>
+            <div class="anime-card">
+                <div class="anime-card__image-wrapper">
+                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
+                    <div class="anime-card__rating">⭐ SCORE</div>
+                </div>
+                <div class="anime-card__info">
+                    <h3 class="anime-card__title">TITLE</h3>
+                    <p class="anime-card__type-year">TYPE · YEAR</p>
+                    <div class="anime-card__genres">
+                    <!-- Жанры -->
+                    <span class="genre">Action</span>
+                    <span class="genre">Adventure</span>
+                    <!-- Вставляй через JS -->
+                    </div>
+                    <p class="anime-card__description">DESCRIPTION</p>
+                </div>
+                <div class="anime-card__actions">
+                    <button class="btn btn--detail">Подробнее</button>
+                    <button class="btn btn--watch">Смотреть</button>
+                </div>
+            </div>
+            <div class="anime-card">
+                <div class="anime-card__image-wrapper">
+                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
+                    <div class="anime-card__rating">⭐ SCORE</div>
+                </div>
+                <div class="anime-card__info">
+                    <h3 class="anime-card__title">TITLE</h3>
+                    <p class="anime-card__type-year">TYPE · YEAR</p>
+                    <div class="anime-card__genres">
+                    <!-- Жанры -->
+                    <span class="genre">Action</span>
+                    <span class="genre">Adventure</span>
+                    <!-- Вставляй через JS -->
+                    </div>
+                    <p class="anime-card__description">DESCRIPTION</p>
+                </div>
+                <div class="anime-card__actions">
+                    <button class="btn btn--detail">Подробнее</button>
+                    <button class="btn btn--watch">Смотреть</button>
+                </div>
+            </div>
+            <div class="anime-card">
+                <div class="anime-card__image-wrapper">
+                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
+                    <div class="anime-card__rating">⭐ SCORE</div>
+                </div>
+                <div class="anime-card__info">
+                    <h3 class="anime-card__title">TITLE</h3>
+                    <p class="anime-card__type-year">TYPE · YEAR</p>
+                    <div class="anime-card__genres">
+                    <!-- Жанры -->
+                    <span class="genre">Action</span>
+                    <span class="genre">Adventure</span>
+                    <!-- Вставляй через JS -->
+                    </div>
+                    <p class="anime-card__description">DESCRIPTION</p>
+                </div>
+                <div class="anime-card__actions">
+                    <button class="btn btn--detail">Подробнее</button>
+                    <button class="btn btn--watch">Смотреть</button>
+                </div>
+            </div>
+            <div class="anime-card">
+                <div class="anime-card__image-wrapper">
+                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
+                    <div class="anime-card__rating">⭐ SCORE</div>
+                </div>
+                <div class="anime-card__info">
+                    <h3 class="anime-card__title">TITLE</h3>
+                    <p class="anime-card__type-year">TYPE · YEAR</p>
+                    <div class="anime-card__genres">
+                    <!-- Жанры -->
+                    <span class="genre">Action</span>
+                    <span class="genre">Adventure</span>
+                    <!-- Вставляй через JS -->
+                    </div>
+                    <p class="anime-card__description">DESCRIPTION</p>
+                </div>
+                <div class="anime-card__actions">
+                    <button class="btn btn--detail">Подробнее</button>
+                    <button class="btn btn--watch">Смотреть</button>
+                </div>
+            </div>
+            
         </section>
     </main>
     <footer>
@@ -21,4 +253,5 @@
     </footer>
 </body>
     <script src="app/parse.js"></script>
+    <script src="app/render.js"></script>
 </html>
