Рабочии кнопким и поиск

--- a/index.html
+++ b/index.html
@@ -10,243 +10,10 @@
 <body>
     <header>
         <div class="header__logo"><a href="#"><h1>My<span class="header__logo-accent">ANIME</span>Database</h1></a></div>
-        <div class="header__serch"><input type="text"></div>
+        <div class="header__serch"><input type="text" id="searchInput" placeholder="Поиск аниме..."></div>
     </header>
     <main>
-        <section class="content" id="content-container">
-            <div class="anime-card">
-                <div class="anime-card__image-wrapper">
-                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
-                    <div class="anime-card__rating">⭐ SCORE</div>
-                </div>
-                <div class="anime-card__info">
-                    <h3 class="anime-card__title">TITLE</h3>
-                    <p class="anime-card__type-year">TYPE · YEAR</p>
-                    <div class="anime-card__genres">
-                    <!-- Жанры -->
-                    <span class="genre">Action</span>
-                    <span class="genre">Adventure</span>
-                    <!-- Вставляй через JS -->
-                    </div>
-                    <p class="anime-card__description">DESCRIPTION</p>
-                </div>
-                <div class="anime-card__actions">
-                    <button class="btn btn--detail">Подробнее</button>
-                    <button class="btn btn--watch">Смотреть</button>
-                </div>
-            </div>
-            <div class="anime-card">
-                <div class="anime-card__image-wrapper">
-                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
-                    <div class="anime-card__rating">⭐ SCORE</div>
-                </div>
-                <div class="anime-card__info">
-                    <h3 class="anime-card__title">TITLE</h3>
-                    <p class="anime-card__type-year">TYPE · YEAR</p>
-                    <div class="anime-card__genres">
-                    <!-- Жанры -->
-                    <span class="genre">Action</span>
-                    <span class="genre">Adventure</span>
-                    <!-- Вставляй через JS -->
-                    </div>
-                    <p class="anime-card__description">DESCRIPTION</p>
-                </div>
-                <div class="anime-card__actions">
-                    <button class="btn btn--detail">Подробнее</button>
-                    <button class="btn btn--watch">Смотреть</button>
-                </div>
-            </div>
-            <div class="anime-card">
-                <div class="anime-card__image-wrapper">
-                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
-                    <div class="anime-card__rating">⭐ SCORE</div>
-                </div>
-                <div class="anime-card__info">
-                    <h3 class="anime-card__title">TITLE</h3>
-                    <p class="anime-card__type-year">TYPE · YEAR</p>
-                    <div class="anime-card__genres">
-                    <!-- Жанры -->
-                    <span class="genre">Action</span>
-                    <span class="genre">Adventure</span>
-                    <!-- Вставляй через JS -->
-                    </div>
-                    <p class="anime-card__description">DESCRIPTION</p>
-                </div>
-                <div class="anime-card__actions">
-                    <button class="btn btn--detail">Подробнее</button>
-                    <button class="btn btn--watch">Смотреть</button>
-                </div>
-            </div>
-            <div class="anime-card">
-                <div class="anime-card__image-wrapper">
-                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
-                    <div class="anime-card__rating">⭐ SCORE</div>
-                </div>
-                <div class="anime-card__info">
-                    <h3 class="anime-card__title">TITLE</h3>
-                    <p class="anime-card__type-year">TYPE · YEAR</p>
-                    <div class="anime-card__genres">
-                    <!-- Жанры -->
-                    <span class="genre">Action</span>
-                    <span class="genre">Adventure</span>
-                    <!-- Вставляй через JS -->
-                    </div>
-                    <p class="anime-card__description">DESCRIPTION</p>
-                </div>
-                <div class="anime-card__actions">
-                    <button class="btn btn--detail">Подробнее</button>
-                    <button class="btn btn--watch">Смотреть</button>
-                </div>
-            </div>
-            <div class="anime-card">
-                <div class="anime-card__image-wrapper">
-                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
-                    <div class="anime-card__rating">⭐ SCORE</div>
-                </div>
-                <div class="anime-card__info">
-                    <h3 class="anime-card__title">TITLE</h3>
-                    <p class="anime-card__type-year">TYPE · YEAR</p>
-                    <div class="anime-card__genres">
-                    <!-- Жанры -->
-                    <span class="genre">Action</span>
-                    <span class="genre">Adventure</span>
-                    <!-- Вставляй через JS -->
-                    </div>
-                    <p class="anime-card__description">DESCRIPTION</p>
-                </div>
-                <div class="anime-card__actions">
-                    <button class="btn btn--detail">Подробнее</button>
-                    <button class="btn btn--watch">Смотреть</button>
-                </div>
-            </div>
-            <div class="anime-card">
-                <div class="anime-card__image-wrapper">
-                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
-                    <div class="anime-card__rating">⭐ SCORE</div>
-                </div>
-                <div class="anime-card__info">
-                    <h3 class="anime-card__title">TITLE</h3>
-                    <p class="anime-card__type-year">TYPE · YEAR</p>
-                    <div class="anime-card__genres">
-                    <!-- Жанры -->
-                    <span class="genre">Action</span>
-                    <span class="genre">Adventure</span>
-                    <!-- Вставляй через JS -->
-                    </div>
-                    <p class="anime-card__description">DESCRIPTION</p>
-                </div>
-                <div class="anime-card__actions">
-                    <button class="btn btn--detail">Подробнее</button>
-                    <button class="btn btn--watch">Смотреть</button>
-                </div>
-            </div>
-            <div class="anime-card">
-                <div class="anime-card__image-wrapper">
-                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
-                    <div class="anime-card__rating">⭐ SCORE</div>
-                </div>
-                <div class="anime-card__info">
-                    <h3 class="anime-card__title">TITLE</h3>
-                    <p class="anime-card__type-year">TYPE · YEAR</p>
-                    <div class="anime-card__genres">
-                    <!-- Жанры -->
-                    <span class="genre">Action</span>
-                    <span class="genre">Adventure</span>
-                    <!-- Вставляй через JS -->
-                    </div>
-                    <p class="anime-card__description">DESCRIPTION</p>
-                </div>
-                <div class="anime-card__actions">
-                    <button class="btn btn--detail">Подробнее</button>
-                    <button class="btn btn--watch">Смотреть</button>
-                </div>
-            </div>
-            <div class="anime-card">
-                <div class="anime-card__image-wrapper">
-                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
-                    <div class="anime-card__rating">⭐ SCORE</div>
-                </div>
-                <div class="anime-card__info">
-                    <h3 class="anime-card__title">TITLE</h3>
-                    <p class="anime-card__type-year">TYPE · YEAR</p>
-                    <div class="anime-card__genres">
-                    <!-- Жанры -->
-                    <span class="genre">Action</span>
-                    <span class="genre">Adventure</span>
-                    <!-- Вставляй через JS -->
-                    </div>
-                    <p class="anime-card__description">DESCRIPTION</p>
-                </div>
-                <div class="anime-card__actions">
-                    <button class="btn btn--detail">Подробнее</button>
-                    <button class="btn btn--watch">Смотреть</button>
-                </div>
-            </div>
-            <div class="anime-card">
-                <div class="anime-card__image-wrapper">
-                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
-                    <div class="anime-card__rating">⭐ SCORE</div>
-                </div>
-                <div class="anime-card__info">
-                    <h3 class="anime-card__title">TITLE</h3>
-                    <p class="anime-card__type-year">TYPE · YEAR</p>
-                    <div class="anime-card__genres">
-                    <!-- Жанры -->
-                    <span class="genre">Action</span>
-                    <span class="genre">Adventure</span>
-                    <!-- Вставляй через JS -->
-                    </div>
-                    <p class="anime-card__description">DESCRIPTION</p>
-                </div>
-                <div class="anime-card__actions">
-                    <button class="btn btn--detail">Подробнее</button>
-                    <button class="btn btn--watch">Смотреть</button>
-                </div>
-            </div>
-            <div class="anime-card">
-                <div class="anime-card__image-wrapper">
-                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
-                    <div class="anime-card__rating">⭐ SCORE</div>
-                </div>
-                <div class="anime-card__info">
-                    <h3 class="anime-card__title">TITLE</h3>
-                    <p class="anime-card__type-year">TYPE · YEAR</p>
-                    <div class="anime-card__genres">
-                    <!-- Жанры -->
-                    <span class="genre">Action</span>
-                    <span class="genre">Adventure</span>
-                    <!-- Вставляй через JS -->
-                    </div>
-                    <p class="anime-card__description">DESCRIPTION</p>
-                </div>
-                <div class="anime-card__actions">
-                    <button class="btn btn--detail">Подробнее</button>
-                    <button class="btn btn--watch">Смотреть</button>
-                </div>
-            </div>
-            <div class="anime-card">
-                <div class="anime-card__image-wrapper">
-                    <img src="media/exemple.jpeg" alt="POSTER_ALT" class="anime-card__image"/>
-                    <div class="anime-card__rating">⭐ SCORE</div>
-                </div>
-                <div class="anime-card__info">
-                    <h3 class="anime-card__title">TITLE</h3>
-                    <p class="anime-card__type-year">TYPE · YEAR</p>
-                    <div class="anime-card__genres">
-                    <!-- Жанры -->
-                    <span class="genre">Action</span>
-                    <span class="genre">Adventure</span>
-                    <!-- Вставляй через JS -->
-                    </div>
-                    <p class="anime-card__description">DESCRIPTION</p>
-                </div>
-                <div class="anime-card__actions">
-                    <button class="btn btn--detail">Подробнее</button>
-                    <button class="btn btn--watch">Смотреть</button>
-                </div>
-            </div>
-            
-        </section>
+        <section class="content" id="content-container"></section>
     </main>
     <footer>
 
@@ -254,4 +21,5 @@
 </body>
     <script src="app/parse.js"></script>
     <script src="app/render.js"></script>
+    <script src="app/serch.js"></script>
 </html>
