--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/index.css">
-    <link rel="stylesheet" href="style/content.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/index.css" />
+    <link rel="stylesheet" href="style/content.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="header__logo"><a href="#"><h1>My<span class="header__logo-accent">ANIME</span>Database</h1></a></div>
-        <div class="header__serch"><input type="text" id="searchInput" placeholder="Поиск аниме..."></div>
+      <div class="header__logo">
+        <a href="#"
+          ><h1>My<span class="header__logo-accent">ANIME</span>Database</h1></a
+        >
+      </div>
+      <div class="header__serch">
+        <input type="text" id="searchInput" placeholder="Поиск аниме..." />
+      </div>
     </header>
     <main>
-        <section class="content" id="content-container"></section>
+      <section class="content" id="content-container"></section>
     </main>
-    <footer>
-
-    </footer>
-</body>
-    <script src="app/parse.js"></script>
-    <script src="app/render.js"></script>
-    <script src="app/serch.js"></script>
+    <div id="pagination"></div>
+    <footer></footer>
+  </body>
+  <script src="app/parse.js"></script>
+  <script src="app/render.js"></script>
+  <script src="app/serch.js"></script>
+  <script src="app/pagination.js"></script>
 </html>
